<resources>
    <string name="app_name">Social AutoShare</string>
    <string name="title_activity_login">Elenco Social Media</string>
    <string name="title_activity_login_google">Login Google</string>
    <string name="title_activity_login_facebook">Login Facebook</string>
    <string name="title_activity_login_twitter">Login Twitter</string>
    <string name="hello_world">Hello world!</string>

    <!-- Home Page Activity -->
    <string name="hint_post_edit_text">Inserisci del testo qui</string>
    <string name="date_post_string">Ora</string>
    <string name="schedule_post_string">PIANIFICA POST</string>
    <string name="share_post_string">PUBBLICA</string>
    <string name="album_name">Social AutoShare</string>

    <!-- Facebook Sharing -->
    <string name="fb_share_ok">OK</string>
    <string name="fb_share_success">Caricamento completato</string>
    <string name="fb_share_error">Si è verificato un errore</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>

    <!-- Login Activity -->
    <string name="title_activity_home_page">Social Auto Share</string>
    <string name="google_homepage_string">Google +</string>
    <string name="facebook_homepage_string">Facebook</string>
    <string name="instagram_homepage_string">Instagram</string>
    <string name="twitter_homepage_string">Twitter</string>

    <!-- Google Login -->
    <string name="signed_in">Accesso eseguito</string>
    <string name="signing_in">Accesso in corso…</string>
    <string name="signed_out">Accesso non eseguito</string>
    <string name="logout_button_text">Logout</string>
    <string name="revoke_button_text">Revoca Accesso</string>

    <!-- Login Error for Snackbar -->
    <string name="play_services_error">Google Play Services Error: %i</string>
    <string name="facebook_error">Facebook: %i</string>
    <string name="facebook_cancel">Tentativo di login cancellato</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">658935754206147</string>

    <!-- ImageView Content Description -->
    <string name="home_page_facebook_icon_description">"Facebook" icon</string>
    <string name="home_page_google_icon_description">"Google" icon</string>
    <string name="home_page_twitter_icon_description">"Twitter" icon</string>
    <string name="home_page_add_icon_description">"Add" icon</string>
    <string name="home_page_noimage_icon_description">"No Image" icon</string>

    <!-- Menu -->
    <string name="action_settings">Impostazioni</string>

    <!-- Content Description for images -->
    <string name="desc_facebook_icon">Facebook Logo</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_instagram_icon">Instagram Logo</string>
    <string name="desc_twitter_icon">Twitter Logo</string>

</resources>
