<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_home_page"
    tools:context="net.napples.socialautoshare.HomePageActivityFragment">

    <LinearLayout
        android:id="@+id/home_page_social_media_icon_linear_layout"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/home_page_vertical_margin"
        android:paddingBottom="@dimen/home_page_vertical_margin"
        android:background="@color/blue_grey300" >

        <ImageView
            android:id="@+id/facebook_login_image_view"
            android:src="@drawable/facebook_square"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:maxWidth="@dimen/home_page_icons_max_length"
            android:maxHeight="@dimen/home_page_icons_max_length"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_page_facebook_icon_description"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginBottom="@dimen/home_page_divider_margin"
            android:layout_marginTop="@dimen/home_page_divider_margin"
            android:background="@color/home_page_divider_color"
            />

        <ImageView
            android:id="@+id/google_login_image_view"
            android:src="@drawable/google_square"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:maxWidth="@dimen/home_page_icons_max_length"
            android:maxHeight="@dimen/home_page_icons_max_length"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_page_google_icon_description"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginBottom="@dimen/home_page_divider_margin"
            android:layout_marginTop="@dimen/home_page_divider_margin"
            android:background="@color/home_page_divider_color"
            />

        <ImageView
            android:id="@+id/twitter_login_image_view"
            android:src="@drawable/twitter_square"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_gravity="center"
            android:maxWidth="@dimen/home_page_icons_max_length"
            android:maxHeight="@dimen/home_page_icons_max_length"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_page_twitter_icon_description"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginBottom="@dimen/home_page_divider_margin"
            android:layout_marginTop="@dimen/home_page_divider_margin"
            android:background="@color/home_page_divider_color"
            />

        <ImageView
            android:id="@+id/add_social_image_view"
            android:src="@drawable/add_square"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:maxWidth="@dimen/home_page_icons_max_length"
            android:maxHeight="@dimen/home_page_icons_max_length"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_page_add_icon_description"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/home_page_post_edit_text"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_heightPercent="32%"
        app:layout_widthPercent="100%"
        android:layout_below="@+id/home_page_social_media_icon_linear_layout"
        android:layout_above="@+id/home_page_post_edit_text"
        android:paddingStart="@dimen/home_page_horizontal_margin"
        android:paddingEnd="@dimen/home_page_horizontal_margin"
        android:paddingTop="@dimen/home_page_horizontal_margin"
        android:paddingBottom="@dimen/home_page_horizontal_margin"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:hint="@string/hint_post_edit_text"
        style="@android:style/TextAppearance.Medium"
        android:textColor="@color/black"
        android:background="@color/blue_grey50"
        />

    <!-- TODO: Insert layout_above -->
    <LinearLayout
        android:id="@+id/home_page_schedule_post_linear_layout"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"
        android:layout_below="@+id/home_page_post_edit_text"
        android:layout_above="@+id/home_page_pic_linear_layout"
        android:orientation="horizontal"
        android:paddingTop="@dimen/home_page_vertical_margin"
        android:paddingBottom="@dimen/home_page_vertical_margin"
        android:background="@color/blue_grey300" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="start"
            android:paddingStart="@dimen/home_page_horizontal_margin"
            android:paddingEnd="@dimen/home_page_horizontal_margin"
            android:maxLines="1"
            android:text="@string/schedule_post_string"
            android:textSize="20sp"
            android:textColor="@color/blue900"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/home_page_data_ora_post_text_view"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:paddingStart="@dimen/home_page_horizontal_margin"
            android:paddingEnd="@dimen/home_page_horizontal_margin"
            android:maxLines="1"
            android:text="@string/date_post_string"
            android:textSize="20sp"
            android:textColor="@color/blue_grey800"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_page_pic_linear_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="40%"
        app:layout_widthPercent="100%"
        android:layout_below="@+id/home_page_attach_schedule_linear_layout"
        android:layout_above="@+id/home_page_share_post_text_view"
        >

        <ImageView
            android:id="@+id/home_page_pic_image_view"
            android:src="@drawable/no_image_icon"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/home_page_padding_imageview"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:alpha="0.3"
            android:contentDescription="@string/home_page_noimage_icon_description"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/home_page_share_post_text_view"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="100%"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/share_post_string"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/amber500"
        />

</android.support.percent.PercentRelativeLayout>
