<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/twitter_login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.napples.socialautoshare.LoginTwitterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@color/blue_grey900" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/blue_grey900" >

            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="@dimen/logo_bottom_margin"
                android:contentDescription="@string/desc_twitter_icon"
                android:src="@drawable/twitter"
                />

            <TextView
                android:id="@+id/twitter_status_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textSize="@dimen/abc_text_size_small_material"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/twitter_user_information_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/blue_grey900" >

            <ImageView
                android:id="@+id/twitter_user_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/twitter_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/username_top_margin"
                android:textSize="@dimen/abc_text_size_title_material"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/twitter_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/email_top_margin"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/blue_grey700" >

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:id="@+id/twitter_logout_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="gone"
                >

                <Button
                    android:id="@+id/twitter_logout_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_button_text"
                    android:backgroundTint="@color/blue_grey900"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>